[package]
name = "umpteen"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "12.0.0", features = ["with-file-history"] }
uuid = { version = "1.5.0", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "fat"